[package]
name = "shotgun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
error-chain = "0.12.4"
reqwest = { version = "0.11.11", features = ["blocking"] }
serde = "1.0.139"
serde_derive = "1.0.139"
serde_json = "1.0.82"
url = "2.2.2"
